--- a/css/src/_event.scss
+++ b/css/src/_event.scss
@@ -170,6 +170,7 @@
 
 
 .event-list {
+	padding: 20px 0;
 	.event {
 		position: relative;
 		padding-left: 100px;
