--- a/css/src/_front.scss
+++ b/css/src/_front.scss
@@ -86,7 +86,7 @@
 	}
 
 	.front-events {
-		padding: 40px 20px;
+		padding: 20px;
 		background: $grey;
 		color: $grey-light;
 
